2011-06-07  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Merge with NetBSD make, pick up
	  o unit-tests/modts now works on MirBSD

2011-06-04  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110606
	  Merge with NetBSD make, pick up
	  o ApplyModifiers: when we parse a variable which is not
	    the entire modifier string, or not followed by ':', do not
	    consider it as containing modifiers.
	  o loadfile: ensure newline at end of mapped file.

2011-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110505
	  Merge with NetBSD make, pick up
	  o .MAKE.META.BAILIWICK - list of prefixes which define the scope
	    of make's control.  In meta mode, any generated file within
	    said bailiwick, which  is found to be missing, causes current
	    target to be out-of-date. 
	
2011-04-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110411
	  Merge with NetBSD make, pick up
	  o when long modifiers fail to match, check sysV style.
	    - add a test case
	
2011-04-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110410
	  Merge with NetBSD make, pick up
	  o :hash - cheap 32bit hash of value
	  o :localtime, :gmtime - use value as format string for strftime.
	
2011-03-30  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20110330
	  mostly because its a cooler version.
	  Merge with NetBSD make, pick up
	  o NetBSD tags for meta.[ch]
	  o job.c call meta_job_finish() after meta_job_error().
	  o meta_job_error() should call meta_job_finish() to ensure
	    .meta file is closed, and safe to copy - if .ERROR target wants.
	   meta_job_finish() is safe to call repeatedly.
	
2011-03-29  Simon J. Gerraty  <sjg@bad.crufty.net>

	* unit-tests/modts: use printf if it is a builtin, 
	  to save us from MirBSD

	* Makefile.in (MAKE_VERSION): bump version to 20110329